# bcon

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.ja.md  README.md  bcon-session  bcon.desktop  bcon@.service  docker-compose.yml  install.sh
.github/workflows/: ci.yml  release.yml
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages
dists/stable/main/binary-arm64/: Packages
docs/: configuration.ja.md  configuration.md  installation.ja.md  installation.md  keybinds.ja.md  keybinds.md  kitty-graphics-status.ja.md  kitty-graphics-status.md
pool/main/b/bcon/: bcon_amd64.deb  bcon_arm64.deb
scripts/: demo.sh
src/: constants.rs  main.rs
src/config/: mod.rs
src/drawing/: geometry.rs  mod.rs
src/drm/: cursor.rs  device.rs  display.rs  hdr.rs  hotplug.rs  ioctl_helpers.rs  mod.rs
src/font/: atlas.rs  emoji.rs  fontconfig.rs  freetype.rs  lcd_atlas.rs  mod.rs  shaper.rs
src/gpu/: context.rs  emoji_renderer.rs  fbo.rs  image_renderer.rs  lcd_renderer.rs  lcd_renderer_instanced.rs  mod.rs  renderer.rs  shader.rs  ui_renderer.rs
src/input/: evdev.rs  ime.rs  keyboard.rs  keycodes.rs  mod.rs
src/pane/: layout.rs  mod.rs  split_tree.rs  tab.rs
src/session/: mod.rs  seatd.rs
src/terminal/: grid.rs  kitty.rs  mod.rs  parser.rs  pty.rs  sixel.rs
src/utils/: color.rs  mod.rs
tests/: generate-test-images.py  kitty-graphics-test.sh  standalone_test.rs  test-images.sh
